# pswapper

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: colors.h  libft.h  libftprintf.h  stack.h
src/: main.c
src/bonus/: main.c  ps_interpret_moves.c
src/bonus/moves/: push.c  reverse_rotate.c  rotate.c  swap.c
src/bonus/parser/: ps_parser.c  ps_parser_utils.c
src/bonus/stack/: ps_stack_append.c  ps_stack_free.c  ps_stack_is_sorted.c  ps_stack_last.c  ps_stack_length.c
src/moves/: push.c  reverse_rotate.c  rotate.c  swap.c
src/parser/: ps_parser.c  ps_parser_checker.c  ps_parser_utils.c
src/sorting/: ps_sort_chunks.c  ps_stack_sort_five.c  ps_stack_sort_more.c  ps_stack_sort_three.c
src/sorting/utils/: ps_shift_back.c  ps_sort_chunks.c  ps_stack_biggest.c  ps_stack_cost.c  ps_stack_indexer.c  ps_stack_leviosa.c  ps_stack_smallest.c  ps_stack_to_array.c
src/stack/: ps_stack_append.c  ps_stack_free.c  ps_stack_is_sorted.c  ps_stack_last.c  ps_stack_length.c  ps_stack_target.c
src/stack/ascii/: ps_ascii_nbox.c  ps_ascii_utils.c
tests/: tester.py
